@@ -1,3 +1,9 @@
+2006-09-06 Jens Tkotz <jens@peino.de> 1.6-svn-b4
+
+ * Change: Moved userData.inc from html/ to layout folder
+
+ * CHANGE: REMOVED html/ folder
+
 2006-08-14 Jens Tkotz <jens@peino.de> 1.6-svn-b3
 
  * Fix: Added popups/save_photos.php to saveToInclude List.
